--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "sass-loader": "^11.0.1",
     "stream-browserify": "^3.0.0",
     "style-loader": "^2.0.0",
+    "ts-loader": "^9.2.4",
+    "typescript": "^4.3.5",
     "util": "^0.12.3",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.5.0",
