Start moving Auth to TS

--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "@babel/core": "^7.13.13",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
+    "@types/react": "^17.0.15",
+    "@types/react-google-recaptcha": "^2.1.2",
+    "@types/react-router-dom": "^5.1.8",
     "babel-loader": "^8.2.2",
     "browserify-fs": "^1.0.0",
     "buffer": "^6.0.3",
