--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "outDir": "./dist/",
-    "noImplicitAny": true,
+    // hopefully temporary!
+    "noImplicitAny": false,
     "module": "es6",
     "target": "es5",
     "jsx": "react",
