--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@types/react": "^17.0.15",
     "@types/react-google-recaptcha": "^2.1.2",
     "@types/react-router-dom": "^5.1.8",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
     "babel-loader": "^8.2.2",
     "browserify-fs": "^1.0.0",
     "buffer": "^6.0.3",
@@ -57,7 +59,8 @@
     "css-minimizer-webpack-plugin": "^1.3.0",
     "eslint": "^7.23.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
