replaced commonmark with micromark and gfm support

--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@tippyjs/react": "^4.2.5",
     "babel-polyfill": "^6.26.0",
     "browser-encrypt-attachment": "^0.3.0",
-    "commonmark": "^0.30.0",
     "dateformat": "^4.5.1",
     "emojibase-data": "^6.2.0",
     "flux": "^4.0.1",
@@ -27,6 +26,8 @@
     "html-react-parser": "^1.2.7",
     "linkifyjs": "^3.0.0-beta.3",
     "matrix-js-sdk": "^12.2.0",
+    "micromark": "^3.0.3",
+    "micromark-extension-gfm": "^1.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-autosize-textarea": "^7.1.0",
@@ -44,6 +45,7 @@
     "@babel/core": "^7.13.13",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
+    "assert": "^2.0.0",
     "babel-loader": "^8.2.2",
     "browserify-fs": "^1.0.0",
     "buffer": "^6.0.3",
@@ -69,7 +71,7 @@
     "sass-loader": "^11.0.1",
     "stream-browserify": "^3.0.0",
     "style-loader": "^2.0.0",
-    "util": "^0.12.3",
+    "util": "^0.12.4",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
