Changed prod workflows back on published

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -1,9 +1,8 @@
 name: Publish Docker image
 
 on:
-  push:
-    branches:
-       - master
+  release:
+    types: [published]
 
 jobs:
    push_to_registry:
