--- a/.github/workflows/netlify-prod.yaml
+++ b/.github/workflows/netlify-prod.yaml
@@ -1,9 +1,8 @@
-name: 'Deploy to Netlify'
+name: 'Deploy to Netlify (prod)'
 
 on:
-  push:
-    branches:
-       - master
+  release:
+    types: [published]
 
 jobs:
   deploy:
