--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -2,7 +2,7 @@ name: 'Netlify Preview Deploy'
 
 on:
   pull_request_target:
-    types: ['opened', 'edited', 'synchronize']
+    types: ['opened', 'synchronize']
 
 jobs:
   deploy:
