--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "webpack serve --config ./webpack.dev.js --open",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider; webpack --config ./webpack.prod.js"
+    "build": "webpack --config ./webpack.prod.js"
   },
   "keywords": [],
   "author": "Ajay Bura",
@@ -72,9 +72,9 @@
     "stream-browserify": "^3.0.0",
     "style-loader": "^2.0.0",
     "util": "^0.12.4",
-    "webpack": "^5.28.0",
+    "webpack": "^5.62.1",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2",
+    "webpack-dev-server": "^4.4.0",
     "webpack-merge": "^5.7.3"
   }
 }
