Removed some servers and fixed shadow on input in safari
Signed-off-by: Ajay Bura <ajbura@gmail.com>

--- a/config.json
+++ b/config.json
@@ -7,8 +7,6 @@
     "halogen.city",
     "kde.org",
     "matrix.org",
-    "mozilla.modular.im",
-    "perthchat.org",
-    "ru-matrix.org"
+    "mozilla.modular.im"
   ]
 }
