--- a/.github/workflows/tauri.yaml
+++ b/.github/workflows/tauri.yaml
@@ -1,25 +1,10 @@
-name: 'Deploy to Netlify (dev)'
-
+name: "publish"
 on:
-  push:
-    branches:
-       - dev
+  release:
+    types: [published]
 
 jobs:
-  deploy:
-    name: 'Deploy'
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v1
-      - uses: jsmrcaga/action-netlify-deploy@master
-        with:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE2_ID }}
-          BUILD_DIRECTORY: "dist"
-          NETLIFY_DEPLOY_MESSAGE: "Dev deploy v${{ github.ref }}"
-          NETLIFY_DEPLOY_TO_PROD: true
-  tauri-dev:
+  publish-tauri:
     strategy:
       fail-fast: false
       matrix:
@@ -28,6 +13,11 @@ jobs:
     runs-on: ${{ matrix.platform }}
     steps:
     - uses: actions/checkout@v2
+    - name: Get release
+        id: get_release
+        uses: bruceadams/get-release@v1.2.3
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: setup node
       uses: actions/setup-node@v1
       with:
@@ -46,3 +36,5 @@ jobs:
     - uses: tauri-apps/tauri-action@v0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        releaseId: ${{ steps.get_release.outputs.upload_url }}
