--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "util": "^0.12.4",
     "webpack": "^5.62.1",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^4.4.0",
-    "webpack-merge": "^5.7.3"
+    "webpack-merge": "^5.7.3",
+    "webpack-dev-server": "^3.11.2"
   }
 }
