--- a/.github/workflows/netlify-dev.yaml
+++ b/.github/workflows/netlify-dev.yaml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 15.x, 16x]
+        node-version: [17x]
 
     steps:
       - uses: actions/checkout@v2
