Specified sha for build script
Signed-off-by: Ajay Bura <ajbura@gmail.com>

--- a/.github/workflows/netlify-dev.yaml
+++ b/.github/workflows/netlify-dev.yaml
@@ -10,17 +10,9 @@ jobs:
     name: 'Deploy'
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [17x]
-
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-      - uses: jsmrcaga/action-netlify-deploy@master
+      - uses: actions/checkout@v1
+      - uses: jsmrcaga/action-netlify-deploy@9cc40dcd499dd1511b3cc99912444f8970411cc6
         with:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE2_ID }}
