--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "react-google-recaptcha": "^2.1.0",
     "react-markdown": "^6.0.1",
     "react-modal": "^3.13.1",
-    "react-router-dom": "^5.2.0",
     "react-syntax-highlighter": "^15.4.3",
     "remark-gfm": "^1.0.0",
+    "sanitize-html": "^2.5.3",
     "tippy.js": "^6.3.1",
     "twemoji": "^13.1.0"
   },
