--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "flux": "^4.0.1",
     "formik": "^2.2.9",
     "html-react-parser": "^1.2.7",
+    "linkify-html": "^3.0.3",
     "linkify-react": "^3.0.3",
     "linkifyjs": "^3.0.3",
     "matrix-js-sdk": "^12.4.1",
@@ -34,10 +35,7 @@
     "react-autosize-textarea": "^7.1.0",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
-    "react-markdown": "^6.0.1",
     "react-modal": "^3.13.1",
-    "react-syntax-highlighter": "^15.4.3",
-    "remark-gfm": "^1.0.0",
     "sanitize-html": "^2.5.3",
     "tippy.js": "^6.3.1",
     "twemoji": "^13.1.0"
