--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": ">=14.6.0"
   },
   "scripts": {
-    "start": "webpack serve --config ./webpack.dev.js",
+    "start": "webpack serve --config ./webpack.dev.js --open",
     "build": "webpack --config ./webpack.prod.js"
   },
   "keywords": [],
