--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "react-modal": "^3.13.1",
     "sanitize-html": "^2.5.3",
     "tippy.js": "^6.3.1",
-    "twemoji": "^13.1.0",
-    "url": "^0.11.0"
+    "twemoji": "^13.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
