--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "dateformat": "^4.5.1",
     "emojibase-data": "^6.2.0",
     "file-saver": "^2.0.5",
-    "flux": "^4.0.1",
+    "flux": "^4.0.3",
     "formik": "^2.2.9",
     "html-react-parser": "^1.2.7",
     "linkifyjs": "^2.1.9",
-    "matrix-js-sdk": "^15.2.1",
+    "matrix-js-sdk": "^15.4.0",
     "micromark": "^3.0.3",
     "micromark-extension-gfm": "^1.0.0",
     "prop-types": "^15.7.2",
@@ -58,7 +58,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "favicons": "^6.2.1",
+    "favicons": "^6.2.2",
     "favicons-webpack-plugin": "^5.0.2",
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
@@ -69,10 +69,11 @@
     "sass-loader": "^11.0.1",
     "stream-browserify": "^3.0.0",
     "style-loader": "^2.0.0",
+    "url": "^0.11.0",
     "util": "^0.12.4",
     "webpack": "^5.62.1",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.4.0",
+    "webpack-dev-server": "^4.7.3",
     "webpack-merge": "^5.7.3"
   }
 }
