Basic spoiler markdown plugin

--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "matrix-js-sdk": "^15.4.0",
     "micromark": "^3.0.3",
     "micromark-extension-gfm": "^1.0.0",
+    "micromark-util-chunked": "^1.0.0",
+    "micromark-util-resolve-all": "^1.0.0",
+    "micromark-util-symbol": "^1.0.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-autosize-textarea": "^7.1.0",
