--- a/package.json
+++ b/package.json
@@ -46,6 +46,12 @@
     "@babel/core": "^7.17.0",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@babel/runtime": "^7.17.0",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
     "assert": "^2.0.0",
     "babel-loader": "^8.2.2",
     "browserify-fs": "^1.0.0",
@@ -57,6 +63,7 @@
     "css-minimizer-webpack-plugin": "^1.3.0",
     "eslint": "^8.8.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.1",
@@ -71,6 +78,7 @@
     "sass-loader": "^11.0.1",
     "stream-browserify": "^3.0.0",
     "style-loader": "^2.0.0",
+    "typescript": "^4.5.5",
     "url": "^0.11.0",
     "util": "^0.12.4",
     "webpack": "^5.62.1",
