--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-modal": "^3.14.4",
+    "regenerator-runtime": "^0.13.9",
     "sanitize-html": "^2.5.3",
     "tippy.js": "^6.3.7",
     "twemoji": "^13.1.0"
