--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "Ajay Bura",
   "license": "MIT",
   "dependencies": {
+    "@fontsource/inter": "^4.5.4",
+    "@fontsource/roboto": "^4.5.3",
     "@matrix-org/olm": "https://gitlab.matrix.org/api/v4/projects/27/packages/npm/@matrix-org/olm/-/@matrix-org/olm-3.2.8.tgz",
     "@tippyjs/react": "^4.2.5",
     "babel-polyfill": "^6.26.0",
