--- a/.github/workflows/deploy-pull-request.yml
+++ b/.github/workflows/deploy-pull-request.yml
@@ -17,7 +17,7 @@ jobs:
               uses: actions/github-script@v6.0.0
               with:
                 script: |
-                  var artifacts = await github.actions.listWorkflowRunArtifacts({
+                  var artifacts = await github.rest.actions.listWorkflowRunArtifacts({
                      owner: context.repo.owner,
                      repo: context.repo.repo,
                      run_id: ${{github.event.workflow_run.id }},
@@ -25,7 +25,7 @@ jobs:
                   var matchArtifact = artifacts.data.artifacts.filter((artifact) => {
                     return artifact.name == "previewbuild"
                   })[0];
-                  var download = await github.actions.downloadArtifact({
+                  var download = await github.rest.actions.downloadArtifact({
                      owner: context.repo.owner,
                      repo: context.repo.repo,
                      artifact_id: matchArtifact.id,
@@ -36,7 +36,7 @@ jobs:
                   var prInfoArtifact = artifacts.data.artifacts.filter((artifact) => {
                     return artifact.name == "pr.json"
                   })[0];
-                  var download = await github.actions.downloadArtifact({
+                  var download = await github.rest.actions.downloadArtifact({
                      owner: context.repo.owner,
                      repo: context.repo.repo,
                      artifact_id: prInfoArtifact.id,
@@ -75,4 +75,4 @@ jobs:
                   pull-request-number: ${{ steps.readctx.outputs.prnumber }}
                   description-message: |
                       Preview: ${{ steps.netlify.outputs.deploy-url }}
-                      ⚠️ Do you trust the author of this PR? Maybe this build will steal your keys or give you malware. Exercise caution. Use test accounts.
+                      ⚠️ Exercise caution. Use test accounts. ⚠️
