--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,22 +1,28 @@
-# Docs: <https://docs.github.com/en/free-pro-team@latest/github/administering-a-repository/customizing-dependency-updates>
+# Docs: <https://docs.github.com/en/code-security/supply-chain-security/keeping-your-dependencies-updated-automatically/customizing-dependency-updates>
 
 version: 2
 
 updates:
   - package-ecosystem: github-actions
     directory: /
-    schedule: {interval: weekly}
-    reviewers: [ajbura]
-    assignees: [ajbura]
+    schedule: 
+      interval: weekly
+      day: "tuesday"
+      time: "01:00"
+      timezone: "Asia/Kolkata"
 
   - package-ecosystem: docker
     directory: /
-    schedule: {interval: weekly}
-    reviewers: [ajbura]
-    assignees: [ajbura]
+    schedule: 
+      interval: weekly
+      day: "tuesday"
+      time: "01:00"
+      timezone: "Asia/Kolkata"
 
   - package-ecosystem: npm
     directory: /
-    schedule: {interval: weekly}
-    reviewers: [ajbura]
-    assignees: [ajbura]
+    schedule: 
+      interval: weekly
+      day: "tuesday"
+      time: "01:00"
+      timezone: "Asia/Kolkata"
