--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "start": "webpack serve --config ./webpack.dev.js --open",
-    "build": "webpack --config ./webpack.prod.js"
+    "build": "webpack --config ./webpack.prod.js",
+    "tauri": "tauri"
   },
   "keywords": [],
   "author": "Ajay Bura",
@@ -18,6 +19,7 @@
     "@fontsource/inter": "^4.5.5",
     "@fontsource/roboto": "^4.5.3",
     "@matrix-org/olm": "https://gitlab.matrix.org/api/v4/projects/27/packages/npm/@matrix-org/olm/-/@matrix-org/olm-3.2.8.tgz",
+    "@tauri-apps/api": "^1.0.0-rc.2",
     "@tippyjs/react": "^4.2.6",
     "babel-polyfill": "^6.26.0",
     "browser-encrypt-attachment": "^0.3.0",
@@ -50,6 +52,7 @@
     "@babel/core": "^7.17.7",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@tauri-apps/cli": "^1.0.0-rc.7",
     "assert": "^2.0.0",
     "babel-loader": "^8.2.2",
     "browserify-fs": "^1.0.0",
