add more artifacts for updater

--- a/.github/workflows/tauri.yaml
+++ b/.github/workflows/tauri.yaml
@@ -48,13 +48,18 @@ jobs:
       with:
         files: |
           src-tauri/target/release/bundle/dmg/cinny_${{ steps.vars.outputs.tag }}_x64.dmg
+          src-tauri/target/release/bundle/macos/cinny.app
+          src-tauri/target/release/bundle/macos/cinny.app.tar.gz
+          src-tauri/target/release/bundle/macos/cinny.app.tar.gz.sig
     - name: Upload tagged release (ubuntu)
       if: matrix.platform == 'ubuntu-latest'
       uses: softprops/action-gh-release@v1
       with:
         files: |
-          src-tauri/target/release/bundle/appimage/cinny_${{ steps.vars.outputs.tag }}_amd64.AppImage
           src-tauri/target/release/bundle/deb/cinny_${{ steps.vars.outputs.tag }}_amd64.deb
+          src-tauri/target/release/bundle/appimage/cinny_${{ steps.vars.outputs.tag }}_amd64.AppImage
+          src-tauri/target/release/bundle/appimage/cinny_${{ steps.vars.outputs.tag }}_amd64.AppImage.tar.gz
+          src-tauri/target/release/bundle/appimage/cinny_${{ steps.vars.outputs.tag }}_amd64.AppImage.tar.gz.sig
     - name: Get app version (windows)
       if: matrix.platform == 'windows-latest'
       run: |
@@ -70,4 +75,6 @@ jobs:
       with:
         files: |
           src-tauri\target\release\bundle\msi\cinny_${{ env.TAURI_VERSION }}_x64_en-US.msi
+          src-tauri\target\release\bundle\msi\cinny_${{ env.TAURI_VERSION }}_x64_en-US.msi.zip
+          src-tauri\target\release\bundle\msi\cinny_${{ env.TAURI_VERSION }}_x64_en-US.msi.zip.sig
           
