--- a/.github/workflows/tauri.yaml
+++ b/.github/workflows/tauri.yaml
@@ -31,8 +31,8 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y webkit2gtk-4.0
-    - name: Install app dependencies and build it
-      run: npm ci && npm run build
+    - name: Install app dependencies
+      run: npm ci
     - uses: tauri-apps/tauri-action@v0.3.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
