--- a/.github/workflows/docker-pr.yml
+++ b/.github/workflows/docker-pr.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     paths: 
       - 'Dockerfile'
+      - '.github/workflows/docker-pr.yml'
 
 jobs:
   docker-build:
@@ -13,8 +14,13 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3.0.1
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1.2.0
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1.6.0
       - name: Build Docker image
         uses: docker/build-push-action@v2.10.0
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           push: false
