--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -37,6 +37,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3.0.1
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1.2.0
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1.6.0
       - name: Login to Docker Hub
         uses: docker/login-action@v1.14.1
         with:
@@ -46,11 +50,12 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3.7.0
         with:
-          images: ajbura/cinny
+          images: kfiven/cinny
       - name: Build and push Docker image
         uses: docker/build-push-action@v2.10.0
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
