--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -50,7 +50,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3.7.0
         with:
-          images: kfiven/cinny
+          images: ajbura/cinny
       - name: Build and push Docker image
         uses: docker/build-push-action@v2.10.0
         with:
