Run docker check when someone change the action too

--- a/.github/workflows/docker-pr.yml
+++ b/.github/workflows/docker-pr.yml
@@ -2,8 +2,9 @@ name: 'Docker check'
 
 on:
   pull_request:
-    paths: 
+    paths:
       - 'Dockerfile'
+      - '.github/workflows/docker-pr.yml'
 
 jobs:
   docker-build:
