--- a/.github/workflows/tauri.yml
+++ b/.github/workflows/tauri.yml
@@ -43,6 +43,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
+        TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
       with:
         releaseId: ${{ steps.get_release.outputs.upload_url }}
     - name: Get app version (macos, ubuntu)
