--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,23 +1,23 @@
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [package]
-name = "app"
-version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
-license = ""
-repository = ""
-default-run = "app"
+name = "cinny"
+version = "1.8.2"
+description = "Yet another matrix client"
+authors = ["Ajay Bura"]
+license = "MIT"
+repository = "https://github.com/cinnyapp/cinny-desktop"
+default-run = "cinny"
 edition = "2021"
 rust-version = "1.57"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [build-dependencies]
-tauri-build = { version = "1.0.0-rc.4", features = [] }
+tauri-build = { version = "1.0.0-rc.7", features = [] }
 
 [dependencies]
-serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0.0-rc.4", features = ["api-all", "updater"] }
+serde_json = "1.0.81"
+serde = { version = "1.0.137", features = ["derive"] }
+tauri = { version = "1.0.0-rc.8", features = ["api-all", "updater"] }
 
 [features]
 # by default Tauri runs in production mode
