--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,11 +24,11 @@ jobs:
       uses: actions-rs/toolchain@v1.0.7
       with:
         toolchain: stable
-    - name: Install webkit2gtk (ubuntu only)
+    - name: Install dependencies (ubuntu only)
       if: matrix.platform == 'ubuntu-latest'
       run: |
         sudo apt-get update
-        sudo apt-get install -y webkit2gtk-4.0
+        sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf
     - name: Install cinny dependencies
       run: cd cinny && npm ci
     - name: Install tauri dependencies
