--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "cinny",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "Yet another matrix client",
   "main": "index.js",
   "engines": {
-    "npm": ">=6.14.11",
-    "node": ">=14.6.0"
+    "npm": ">=6.14.8 <=8.5.5",
+    "node": ">=14.15.0 <=17.9.0"
   },
   "scripts": {
     "tauri": "tauri",
