--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "flux": "^4.0.3",
     "formik": "^2.2.9",
     "html-react-parser": "^1.4.14",
+    "i18next": "^21.8.9",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.1",
     "katex": "^0.15.6",
     "linkifyjs": "^2.1.9",
     "matrix-js-sdk": "^18.0.0",
@@ -43,6 +46,7 @@
     "react-dnd-html5-backend": "^15.1.3",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
+    "react-i18next": "^11.17.1",
     "react-modal": "^3.15.1",
     "sanitize-html": "^2.7.0",
     "tippy.js": "^6.3.7",
