Fix mozilla homerserver domain (#199)

--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
     "halogen.city",
     "kde.org",
     "matrix.org",
-    "chat.mozilla.org"
+    "mozilla.org"
   ],
   "allowCustomHomeservers": true
 }
