--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Ajay Bura",
   "license": "MIT",
   "dependencies": {
+    "@alienfast/i18next-loader": "^1.1.4",
     "@fontsource/inter": "^4.5.11",
     "@fontsource/roboto": "^4.5.7",
     "@matrix-org/olm": "https://gitlab.matrix.org/api/v4/projects/27/packages/npm/@matrix-org/olm/-/@matrix-org/olm-3.2.8.tgz",
@@ -26,11 +27,10 @@
     "file-saver": "^2.0.5",
     "flux": "^4.0.3",
     "formik": "^2.2.9",
-    "html-react-parser": "^1.4.14",
+    "html-react-parser": "^2.0.0",
     "i18next": "^21.8.9",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
-    "html-react-parser": "^2.0.0",
     "katex": "^0.15.6",
     "linkify-html": "^4.0.0-beta.5",
     "linkifyjs": "^4.0.0-beta.5",
