--- a/package.json
+++ b/package.json
@@ -32,12 +32,6 @@
     "linkify-html": "^4.0.0-beta.5",
     "linkifyjs": "^4.0.0-beta.5",
     "matrix-js-sdk": "^19.2.0",
-    "micromark": "^3.0.10",
-    "micromark-extension-gfm": "^2.0.1",
-    "micromark-extension-math": "^2.0.2",
-    "micromark-util-chunked": "^1.0.0",
-    "micromark-util-resolve-all": "^1.0.0",
-    "micromark-util-symbol": "^1.0.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-autosize-textarea": "^7.1.0",
@@ -48,6 +42,7 @@
     "react-google-recaptcha": "^2.1.0",
     "react-modal": "^3.15.1",
     "sanitize-html": "^2.7.1",
+    "simple-markdown": "^0.7.3",
     "tippy.js": "^6.3.7",
     "twemoji": "^14.0.2"
   },
