--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "start": "webpack serve --config ./webpack.dev.js --open",
-    "build": "webpack --config ./webpack.prod.js"
+    "build": "webpack --config ./webpack.prod.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "Ajay Bura",
@@ -67,6 +68,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "html-loader": "4.2.0",
     "html-webpack-plugin": "5.5.0",
+    "jest": "29.0.3",
     "mini-css-extract-plugin": "2.6.1",
     "path-browserify": "1.0.1",
     "sass": "1.55.0",
