Revert 7f633e3260bb22fd423dd2010a2b4fd91521bd99

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -5,6 +5,11 @@
     ":dependencyDashboardApproval"
   ],
   "labels": [ "Dependencies" ],
+  "packageRules": [
+    {
+    "matchUpdateTypes": [ "lockFileMaintenance" ]
+    }
+  ],
   "lockFileMaintenance": { "enabled": true },
   "dependencyDashboard": true
 }
