--- a/.github/workflows/tauri.yml
+++ b/.github/workflows/tauri.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v3.5.1
         with:
-          node-version: 18.12.0
+          node-version: 18.12.1
+          cache: 'npm'
       - name: Install Rust stable
         uses: actions-rs/toolchain@v1.0.7
         with:
@@ -76,7 +77,8 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v3.5.1
         with:
-          node-version: 18.12.0
+          node-version: 18.12.1
+          cache: 'npm'
       - name: Install Rust stable
         uses: actions-rs/toolchain@v1.0.7
         with:
@@ -133,7 +135,8 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v3.5.1
         with:
-          node-version: 18.12.0
+          node-version: 18.12.1
+          cache: 'npm'
       - name: Install Rust stable
         uses: actions-rs/toolchain@v1.0.7
         with:
@@ -183,7 +186,8 @@ jobs:
   #     - name: Setup node
   #       uses: actions/setup-node@v3.4.1
   #       with:
-  #         node-version: 18.12.0
+  #         node-version: 18.12.1
+  #         cache: 'npm'
   #     - name: Install Rust stable
   #       uses: actions-rs/toolchain@v1.0.7
   #       with:
