Enable ts strict mode

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "jsx": "react",
     "target": "ES6",
     "allowJs": true,
+    "strict": true,
     "esModuleInterop": true,
     "moduleResolution": "Node",
     "outDir": "dist",
