Change license to AGPLv3 (#142)
* Add CLA Github action

* Change license to AGPLv3

* Change LICENSE file text

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -5,7 +5,7 @@ name = "cinny"
 version = "2.2.4"
 description = "Yet another matrix client"
 authors = ["Ajay Bura"]
-license = "MIT"
+license = "AGPL-3.0-only"
 repository = "https://github.com/cinnyapp/cinny-desktop"
 default-run = "cinny"
 edition = "2021"
