--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "keywords": [],
   "author": "Ajay Bura",
-  "license": "MIT",
+  "license": "AGPL-3.0-only",
   "dependencies": {
     "@tauri-apps/api": "1.2.0"
   },
